Closed
Bug 381114
Opened 18 years ago
Closed 18 years ago
Crash [@ msaa/nsAccessibleWrap::NativeAccessible ]
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: aaronlev, Assigned: aaronlev)
Details
(Keywords: access, crash, fixed1.8.1.5)
Crash Data
Attachments
(2 files, 2 obsolete files)
|
1.27 KB,
patch
|
MatsPalmgren_bugz
:
review+
dveditz
:
approval1.8.1.5+
|
Details | Diff | Splinter Review |
|
1.23 KB,
patch
|
MatsPalmgren_bugz
:
review+
|
Details | Diff | Splinter Review |
If nsnull is passed in, we crash. That happens if the caller wasn't able to get an nsIAccessible.
| Assignee | ||
Comment 1•18 years ago
|
||
Attachment #265190 -
Flags: review?(mats.palmgren)
| Assignee | ||
Comment 2•18 years ago
|
||
Attachment #265191 -
Flags: review?(mats.palmgren)
| Assignee | ||
Updated•18 years ago
|
Attachment #265190 -
Attachment is obsolete: true
Attachment #265190 -
Flags: review?(mats.palmgren)
| Assignee | ||
Comment 3•18 years ago
|
||
Attachment #265193 -
Flags: review?(mats.palmgren)
| Assignee | ||
Comment 4•18 years ago
|
||
Attachment #265191 -
Attachment is obsolete: true
Attachment #265194 -
Flags: review?(mats.palmgren)
Attachment #265191 -
Flags: review?(mats.palmgren)
Comment 5•18 years ago
|
||
Comment on attachment 265194 [details] [diff] [review]
Correct patch for trunk
Looks good. I would add an NS_ERROR before the return to catch
future mistakes. Either way, r=mats
Attachment #265194 -
Flags: review?(mats.palmgren) → review+
Comment 6•18 years ago
|
||
Comment on attachment 265193 [details] [diff] [review]
For 1.8.1 branch
ditto, r=mats
Attachment #265193 -
Flags: review?(mats.palmgren) → review+
| Assignee | ||
Comment 7•18 years ago
|
||
Checked in on trunk with NS_WARNING
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
| Assignee | ||
Updated•18 years ago
|
Attachment #265193 -
Flags: approval1.8.1.5?
Comment 8•18 years ago
|
||
Comment on attachment 265193 [details] [diff] [review]
For 1.8.1 branch
approved for 1.8.1.5, a=dveditz for release-drivers
Attachment #265193 -
Flags: approval1.8.1.5? → approval1.8.1.5+
Comment 9•18 years ago
|
||
Looks like Aaron checked in the branch patch on MOZILLA_1_8_BRANCH 2007-06-29:
accessible/src/msaa/nsAccessibleWrap.cpp rev. 1.31.4.4
Keywords: fixed1.8.1.5
Is there an end-user testcase to reproduce this, or can we just check talkback/breakpad, to verify?
Updated•14 years ago
|
Crash Signature: [@ msaa/nsAccessibleWrap::NativeAccessible ]
You need to log in
before you can comment on or make changes to this bug.
Description
•