Bug 381114. Crash [@ msaa/nsAccessibleWrap::NativeAccessible ]. r= mats.palmgren